deploy/k3s/artifact/ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ljwx-platform-ingress
  annotations:
    cert-manager.io/cluster-issuer: dnspod-letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: <change-me-backend-host>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ljwx-platform
                port:
                  number: 80
    - host: <change-me-admin-host>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ljwx-platform-admin-ui
                port:
                  number: 80
    - host: <change-me-screen-host>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ljwx-platform-screen
                port:
                  number: 80
  tls:
    - hosts:
        - <change-me-backend-host>
      secretName: <change-me-backend-tls>
    - hosts:
        - <change-me-admin-host>
      secretName: <change-me-admin-tls>
    - hosts:
        - <change-me-screen-host>
      secretName: <change-me-screen-tls>
